--- a/webapp/app/subwayLine/subway.html
+++ b/webapp/app/subwayLine/subway.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RB</title>
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./../../assets/css/subwayLine/subway.css">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="subway_line_img">
-      <img src="./img/allline.png" alt="전체호선사진" id="allline">
+      <img src="./../../assets/img/subwayLine/allline.png" alt="전체호선사진" id="allline">
     </div>
   </main>
   <footer>
