--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="./map.css">
+  <link rel="stylesheet" href="./../../assets/css/map/map.css">
 </head>
 <body>
   <header>
