250806 19:00 강버들 메인 진행중

--- a/webapp/app/main.html
+++ b/webapp/app/main.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="./../../css/main/css.css">
+  <link rel="stylesheet" href="./../assets/css/main.css">
 </head>
 <body>
   <header>
     <div>
       <span>
         <a href="./dummy.html">
-          <img src="./../../img/main/logo/logoP.png">
+          <img src="./../assets/img/main/logoP.png">
         </a>
       </span>
       <span>
