--- a/webapp/app/login/login.html
+++ b/webapp/app/login/login.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>로그인페이지</title>
+    <link rel="stylesheet" href="./../../assets/css/login/login.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로그인페이지</title>
-  <link rel="stylesheet" href="./../../assets/css/login/login.css">
-</head>
+  <body>
+    <header>
+      <h1>헤더입니다.</h1>
+    </header>
+    <main>
+      <section class="login">
+        <div class="box">
+          <div class="box_title">
+            <p>login</p>
+          </div>
+          <div class="id_box">
+            <input type="text" placeholder="USER ID" />
+          </div>
+          <div class="pw_box">
+            <input type="password" placeholder="PASSWORD" />
+          </div>
+          <div class="bt_box">
+            <button>돌봄 로그인</button>
+            <button>일반 로그인</button>
+          </div>
+          <div class="link_box">
+            <a href="#">아이디 찾기</a>
+            <a href="#">비밀번호 찾기</a>
+            <a href="#">회원가입</a>
+          </div>
+        </div>
+      </section>
+    </main>
 
-<body>
-  <header>
-    <h1>헤더입니다.</h1>
-  </header>
-  <main>
-    <section class="login">
-      <div class="box">
-        <div class="box_title">
-          <p>login</p>
-        </div>
-        <div class="id_box">
-          <input type="text" placeholder="USER ID">
-        </div>
-        <div class="pw_box">
-          <input type="password" placeholder="USER PASSWORD">
-        </div>
-        <div class="bt_box">
-          <button>돌봄 로그인</button>
-          <button>일반 로그인</button>
-        </div>
-        <div class="link_box"></div>
-      </div>
-    </section>
-  </main>
-  
-  <footer>
-    <h1>푸터입니다.</h1>
-  </footer>
-</body>
-
+    <footer>
+      <h1>푸터입니다.</h1>
+    </footer>
+  </body>
 </html>
