250806 22:30 김태현 지도페이지 제작중

--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="./../../assets/css/map/map.css">
+  <link rel="stylesheet" href="../../assets/css/map/map.css">
 </head>
 <body>
-  <header>
-
-  </header>
+  <div class="header">
+    
+  </div>
   <main>
     <div class="map_container">
-      <div class="map_api"></div>
+      <div class="map_api"><img src="../../assets/img/map/mapImg.png" alt="지도그림"></div>
     </div>
   </main>
-  <footer>
+  <div class="footer">
 
-  </footer>
+  </div>
 </body>
 </html>
