250806 22:36 찜목록 작성중

--- a/webapp/app/myPageNormal/Normal_PwCheck.html
+++ b/webapp/app/myPageNormal/Normal_PwCheck.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Normal_PwCheck</title>
-  <link rel="stylesheet" href="./../css/Normal_PwCheck.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_PwCheck.css">
 </head>
 <body>
   <header>
 
   </header>
   <main>
-    <nav>
+    <nav class="main_sidebar">
+      <div></div>
       <ul>
         <li>개인정보 수정</li>
         <li>찜한 목록</li>
@@ -24,11 +25,11 @@
         <li>회원 탈퇴</li>
       </ul>
     </nav>
-    <div>
+    <div class="pw_check">
       <form action="" method="get">
         비밀번호<input type="text" placeholder="비밀번호 8자리 입력">
         <button>비밀번호 확인</button>
-        <h5>일치하지 않는 비밀번호 입니다</h5>
+        <div>일치하지 않는 비밀번호 입니다</div>
       </form>
     </div>
   </main>
