250806 22:38 장성주 자바스크립트 진행 중

--- a/webapp/app/subwayLine/subway.html
+++ b/webapp/app/subwayLine/subway.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RB</title>
   <link rel="stylesheet" href="./../../assets/css/subwayLine/subway.css">
+  <script defer src="./../../assets/js/subwayLine/subwayLine.js"></script>
 </head>
 <body>
   <header>
@@ -23,9 +24,37 @@
         <button id="dxline"> 신분당선 </button>
       </div>
     </div>
-    <div class="subway_line_img">
-      <img src="./../../assets/img/subwayLine/allline.png" alt="전체호선사진" id="allline">
+    <div class="map_section"> <!-- 여기는 지도가 들어갈 겁애유 이미지..도 들어가나-->
+      <div class="subway_allline_img">
+        <img src="./../../assets/img/subwayLine/allline.png" alt="전체호선사진">
+      </div>
+      <div class="subway_line2_img">
+        <img src="./../../assets/img/subwayLine/line2.png" alt="2호선사진">
+      </div>
+      <div class="subway_line3_img">
+        <img src="./../../assets/img/subwayLine/line3.png" alt="3호선사진">
+      </div>
+      <div class="subway_line4_img">
+        <img src="./../../assets/img/subwayLine/line4.png" alt="4호선사진">
+      </div>
+      <div class="subway_line7_img">
+        <img src="./../../assets/img/subwayLine/line7.png" alt="7호선사진">
+      </div>
+      <div class="subway_line9_img">
+        <img src="./../../assets/img/subwayLine/line9.png" alt="9호선사진">
+      </div>
+      <div class="subway_dxline_img">
+        <img src="./../../assets/img/subwayLine/dxline.png" alt="신분당선사진">
+      </div>
+
+      <div class="station_list">
+
+      </div>
     </div>
+
+    <section class="station_info">
+      <p>역 정보 출력</p>
+    </section>
   </main>
   <footer>
 
