--- a/webapp/app/main.html
+++ b/webapp/app/main.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./../assets/css/main.css">
+  <script defer src="./../assets/js/main/main.js"></script>
 </head>
 <body>
   <header>
@@ -73,7 +74,19 @@
   <main>
     <div class="main_body">
       <div class="news_banner">
-
+        <!-- 여기부터 슬라이드 박스 -->
+        <ul class="slide-box">
+          <li>
+            <div class="slide-img">1</div>
+          </li>
+          <li>
+            <div class="slide-img">2</div>
+          </li>
+          <li>
+            <div class="slide-img">3</div>
+          </li>
+        </ul>
+        <!-- 슬라이드 박스 끝 -->
       </div>
       <div class="recommend">
         <div class="recommend_activity">
@@ -166,7 +179,76 @@
         </div>
       </div>
       <div class="explore">
-        
+        <div class="explore_map">
+          
+        </div>
+        <div class="explore_care">
+          <ul>
+            <li>
+              <a href ="dummy.html" class="care_profile">
+                <sapn>
+                  <div class="profile_pic_box">
+                    <img class="profile_pic" src="./../assets/img/main/profilePicCare.png">
+                  </div>
+                  <div>
+                    <ul class="day_box">
+                      <li class="day">
+                        화
+                      </li>
+                      <li class="day">
+                        화
+                      </li>
+                      <li class="day">
+                        화
+                      </li>
+                      <li class="day">
+                        화
+                      </li>
+                    </ul>
+                  </div>
+                </sapn>
+                <span class="profile_text">
+                  <div class="profile_name">
+                    김괭이dddd
+                  </div>
+                  <div class="profile_introduction">
+                    재빠른... djfkadjflakjfdlkajsdflkjsafkjdslkjf
+                  </div>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href ="dummy.html" class="care_profile">
+                <sapn>
+                  <div class="profile_pic_box">
+                    <img class="profile_pic" src="./../assets/img/main/profilePicCare.png">
+                  </div>
+                  <div>
+                    <ul class="day_box">
+                      <li class="day">
+                        화
+                      </li>
+                      <li class="day">
+                        화
+                      </li>
+                      <li class="day">
+                        화
+                      </li>
+                    </ul>
+                  </div>
+                </sapn>
+                <span class="profile_text">
+                  <div class="profile_name">
+                    김괭이
+                  </div>
+                  <div class="profile_introduction">
+                    재빠른...
+                  </div>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
