250807 0900 황승우 작업중

--- a/webapp/app/login/findPassword.html
+++ b/webapp/app/login/findPassword.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>아이디 찾기</title>
+    <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/login/findId.css" />
   </head>
@@ -22,6 +22,10 @@
             <div class="box_name">
               <p>이름</p>
               <input type="text" placeholder="" name="name" />
+            </div>
+            <div class="box_id">
+              <p>아이디</p>
+              <input type="text" placeholder="" name="id" />
               <label for="member_normal">
                 <input
                   type="radio"
