--- a/webapp/app/login/login.html
+++ b/webapp/app/login/login.html
@@ -13,26 +13,28 @@
     </header>
     <main>
       <section class="login">
-        <div class="box">
-          <div class="box_title">
-            <p>login</p>
+        <form action="" method="">
+          <div class="box">
+            <div class="box_title">
+              <p>login</p>
+            </div>
+            <div class="id_box">
+              <input type="text" placeholder="USER ID" />
+            </div>
+            <div class="pw_box">
+              <input type="password" placeholder="PASSWORD" />
+            </div>
+            <div class="bt_box">
+              <button>돌봄 로그인</button>
+              <button>일반 로그인</button>
+            </div>
+            <div class="link_box">
+              <a href="#">아이디 찾기</a>
+              <a href="#">비밀번호 찾기</a>
+              <a href="#">회원가입</a>
+            </div>
           </div>
-          <div class="id_box">
-            <input type="text" placeholder="USER ID" />
-          </div>
-          <div class="pw_box">
-            <input type="password" placeholder="PASSWORD" />
-          </div>
-          <div class="bt_box">
-            <button>돌봄 로그인</button>
-            <button>일반 로그인</button>
-          </div>
-          <div class="link_box">
-            <a href="#">아이디 찾기</a>
-            <a href="#">비밀번호 찾기</a>
-            <a href="#">회원가입</a>
-          </div>
-        </div>
+        </form>
       </section>
     </main>
 
