--- a/webapp/app/login/findIdResult.html
+++ b/webapp/app/login/findIdResult.html
@@ -12,7 +12,7 @@
       <h1>헤더입니다.</h1>
     </header>
     <main>
-      <section class="rusult">
+      <section class="result">
         <div class="result_content">
           <div class="result_content_box">
             <div class="content_box_title">아이디 찾기 결과</div>
