250807 0940 황승우 약관 작업중

--- a/webapp/app/login/findPassword.html
+++ b/webapp/app/login/findPassword.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
-    <link rel="stylesheet" href="./../../assets/css/login/findId.css" />
+    <link rel="stylesheet" href="./../../assets/css/login/findPassword.css" />
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
         <form action="" method="">
         <div class="box">
           <div class="box_title">
-            <p>아이디 찾기</p>
+            <p>비밀번호 찾기</p>
           </div>
           <div class="box_content">
             <div class="box_name">
