--- a/webapp/app/login/resultSign.html
+++ b/webapp/app/login/resultSign.html
@@ -12,7 +12,7 @@
       <h1>헤더입니다.</h1>
     </header>
     <main>
-      <section class="rusult">
+      <section class="result">
         <div class="result_content">
           <div class="result_content_box">
             <div class="content_box_title">회원가입이 반려처리 되었습니다.</div>
