--- a/webapp/app/myPageNormal/Normal_Post.html
+++ b/webapp/app/myPageNormal/Normal_Post.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_Mark</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Mark.css">
+  <title>Normal_Post</title>
+  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Post.css">
 </head>
 <body>
   <header>
-
+  
   </header>
   <main>
     <nav class="main_sidebar">
@@ -25,14 +25,21 @@
         <li>회원 탈퇴</li>
       </ul>
     </nav>
+  
     <div class="div_mark">
-      <div class="title">찜한 목록</div>
+      <div class="title">게시글 관리 </div>
+      <nav class="div_choose">
+        <ul>
+          <li>작성한 게시글 목록</li>
+        </ul>
+  
+      </nav>
       <nav class="mark_nav">
         <input type="checkbox">
         <ul>
-          <li>이름</li>
-          <li>위치</li>
-          <li>전화번호</li>
+          <li>작성자</li>
+          <li>제목</li>
+          <li>날짜</li>
         </ul>
       </nav>
       <nav class="page">
@@ -44,17 +51,15 @@
           <li>4</li>
           <li>&gt;</li>
         </ul>
-
+  
       </nav>
       <div class="div_delete">
-        <button>찜 삭제</button>
+        <button>삭제</button>
       </div>
     </div>
-    
-    
   </main>
   <footer>
-
+  
   </footer>
 </body>
 </html>
