250807 9:43 김태현 지도페이지 작업중

--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -13,6 +13,10 @@
   <main>
     <div class="map_container">
       <div class="map_api"><img src="../../assets/img/map/mapImg.png" alt="지도그림"></div>
+      <div class="sidebar">
+        <div class="map_info"></div>
+        <div class="map_detail"></div>
+      </div>
     </div>
   </main>
   <div class="footer">
