250807 강버들 메인 진행 중(main.html 다시 app으로 옮김)

--- a/webapp/app/main.html
+++ b/webapp/app/main.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="./../assets/css/main.css">
-  <script defer src="./../assets/js/main/main.js"></script>
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <script defer src="./assets/js/main/main.js"></script>
 </head>
 <body>
   <header>
     <div>
       <span>
         <a href="./dummy.html">
-          <img src="./../assets/img/main/logoP.png">
+          <img src="./assets/img/main/logoP.png">
         </a>
       </span>
       <span>
@@ -84,6 +84,15 @@
           </li>
           <li>
             <div class="slide-img">3</div>
+          </li>
+          <li>
+            <div class="slide-img">4</div>
+          </li>
+          <li>
+            <div class="slide-img">5</div>
+          </li>
+          <li>
+            <div class="slide-img">6</div>
           </li>
         </ul>
         <!-- 슬라이드 박스 끝 -->
@@ -186,42 +195,44 @@
           <ul>
             <li>
               <a href ="dummy.html" class="care_profile">
-                <sapn>
-                  <div class="profile_pic_box">
-                    <img class="profile_pic" src="./../assets/img/main/profilePicCare.png">
-                  </div>
-                  <div>
-                    <ul class="day_box">
-                      <li class="day">
-                        화
-                      </li>
-                      <li class="day">
-                        화
-                      </li>
-                      <li class="day">
-                        화
-                      </li>
-                      <li class="day">
-                        화
-                      </li>
-                    </ul>
-                  </div>
-                </sapn>
-                <span class="profile_text">
-                  <div class="profile_name">
-                    김괭이dddd
-                  </div>
-                  <div class="profile_introduction">
-                    재빠른... djfkadjflakjfdlkajsdflkjsafkjdslkjf
-                  </div>
-                </span>
+                <div>
+                  <sapn>
+                    <div class="profile_pic_box">
+                      <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
+                    </div>
+                  </sapn>
+                  <span class="profile_text">
+                    <div class="profile_name">
+                      김괭이dddd
+                    </div>
+                    <div class="profile_introduction">
+                      재빠른... djfkadjflakjfdlkajsdflkjsafkjdslkjf
+                    </div>
+                  </span>
+                </div>
+                <div>
+                  <ul class="day_box">
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                  </ul>
+                </div>
               </a>
             </li>
             <li>
               <a href ="dummy.html" class="care_profile">
                 <sapn>
                   <div class="profile_pic_box">
-                    <img class="profile_pic" src="./../assets/img/main/profilePicCare.png">
+                    <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
                   <div>
                     <ul class="day_box">
