--- a/webapp/app/myPageNormal/Normal_Modify.html
+++ b/webapp/app/myPageNormal/Normal_Modify.html
@@ -29,18 +29,21 @@
 
     <div class="div_mark">
       <div class="title">1 대 1 문의</div>
-    </div>
-    <div>
-      <div>
+      <div class="arlim">
+        <div>
 
+        </div>
+        <nav>
+          <ul>
+            <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
+            <li>회원님의 개인 정보를 안전하게 보호하기 위해 최선을 다하고 있습니다. </li>
+            <li>회원님의 정보를 특정할 수 있는 것은 입력을 지양해 주시길 바랍니다.</li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
-          <li>회원님의 개인 정보를 안전하게 보호하기 위해 최선을 다하고 있습니다. </li>
-          <li>회원님의 정보를 특정할 수 있는 것은 입력을 지양해 주시길 바랍니다.</li>
-        </ul>
-      </nav>
+      <div>
+        <div>회원 정보</div>
+      </div>
     </div>
   </main>
   <footer>
