--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -23,5 +23,11 @@
   <div class="footer">
 
   </div>
+  <article class="modalbox">
+    <div class="login_check_model">
+      <div class="x-box">&times;</div>
+      <div class="modal_text">로그인이 필요합니다.</div>
+    </div>
+  </article>
 </body>
 </html>
