250807 11:08 장성주 마이페이지 돌봄 진행중

--- a/webapp/app/myPageCare/Care_Matching.html
+++ b/webapp/app/myPageCare/Care_Matching.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Normal_Post</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Post.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_Matching.css">
 </head>
 <body>
   <header>
@@ -26,19 +26,27 @@
     </nav>
   
     <div class="div_mark">
-      <div class="title">게시글 관리 </div>
+      <div class="title"> 매칭 기록 </div>
       <nav class="div_choose">
         <ul>
           <li>작성한 게시글 목록</li>
         </ul>
   
       </nav>
-      <nav class="mark_nav">
-        <input type="checkbox">
+      <nav class="matching_month">
         <ul>
-          <li>작성자</li>
-          <li>제목</li>
-          <li>날짜</li>
+          <li>1월</li>
+          <li>2월</li>
+          <li>3월</li>
+          <li>4월</li>
+          <li>5월</li>
+          <li>6월</li>
+          <li>7월</li>
+          <li>8월</li>
+          <li>9월</li>
+          <li>10월</li>
+          <li>11월</li>
+          <li>12월</li>
         </ul>
       </nav>
       <nav class="page">
@@ -52,8 +60,8 @@
         </ul>
   
       </nav>
-      <div class="div_delete">
-        <button>삭제</button>
+      <div class="div_add">
+        <button>추가</button>
       </div>
     </div>
   </main>
