--- a/webapp/app/myPageCare/Care_Mark.html
+++ b/webapp/app/myPageCare/Care_Mark.html
@@ -25,9 +25,10 @@
         <li>포인트 환급</li>
         <li>1 대 1 문의</li>
         <li>회원 탈퇴</li>
+      </ul>
     </nav>
     <div class="div_mark">
-      <div>찜한 목록</div>
+      <div class="title">찜한 목록</div>
       <nav class="mark_nav">
         <input type="checkbox">
         <ul>
@@ -35,6 +36,8 @@
           <li>위치</li>
           <li>전화번호</li>
         </ul>
+        
+        </nav>
         <nav class="page">
           <ul>
             <li>&lt;</li>
@@ -46,8 +49,9 @@
           </ul>
   
         </nav>
-        <button>찜 삭제</button>
-      </nav>
+        <div class="div_delete">
+          <button>찜 삭제</button>
+        </div>
     </div>
   </main>
   <footer>
