--- a/webapp/app/myPageCare/Care_Message.html
+++ b/webapp/app/myPageCare/Care_Message.html
@@ -16,11 +16,10 @@
       <ul>
         <li>개인정보 수정</li>
         <li>찜한 목록</li>
-        <li>하트 목록</li>
         <li>매칭 기록</li>
         <li>쪽지함</li>
         <li>게시글 관리</li>
-        <li>포인트 충전</li>
+        <li>포인트 환급</li>
         <li>1 대 1 문의</li>
         <li>회원 탈퇴</li>
       </ul>
