--- a/webapp/app/myPageCare/Care_Modify.html
+++ b/webapp/app/myPageCare/Care_Modify.html
@@ -17,11 +17,10 @@
       <ul>
         <li>개인정보 수정</li>
         <li>찜한 목록</li>
-        <li>하트 목록</li>
         <li>매칭 기록</li>
         <li>쪽지함</li>
         <li>게시글 관리</li>
-        <li>포인트 충전</li>
+        <li>포인트 환급</li>
         <li>1 대 1 문의</li>
         <li>회원 탈퇴</li>
       </ul>
@@ -34,7 +33,7 @@
       <div>
 
       </div>
-      <nav>
+      <nav class="info">
         <ul>
           <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
           <li>회원님의 개인 정보를 안전하게 보호하기 위해 최선을 다하고 있습니다. </li>
