250807 11:11 이재빈 개인정보수정중4

--- a/webapp/app/myPageNormal/Normal_Modify.html
+++ b/webapp/app/myPageNormal/Normal_Modify.html
@@ -44,6 +44,27 @@
       <div>
         <div>회원 정보</div>
       </div>
+      <div>
+        <div>성명
+          <div>이름</div>
+        </div>
+        <div>상태
+          <div>
+            1레벨
+          </div>
+        </div>
+        <div>주소
+          <nav>
+            <ul>
+              <li>우편번호</li>
+              <li>주소
+                
+              </li>
+              <li>상세주소</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
   </main>
   <footer>
