250807 11:17 강버들 메인 마무리 중

--- a/webapp/main.html
+++ b/webapp/main.html
@@ -189,27 +189,27 @@
       </div>
       <div class="explore">
         <div class="explore_map">
-          
+          <img src="./assets/img/main/map.PNG" class="map_img">
         </div>
         <div class="explore_care">
           <ul>
             <li>
               <a href ="dummy.html" class="care_profile">
-                <div>
-                  <sapn>
-                    <div class="profile_pic_box">
-                      <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
-                    </div>
-                  </sapn>
+                <!-- 사진이랑 소개 -->
+                <div class="profile_info">
+                  <div class="profile_pic_box">
+                    <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
+                  </div>
                   <span class="profile_text">
                     <div class="profile_name">
                       김괭이dddd
                     </div>
                     <div class="profile_introduction">
-                      재빠른... djfkadjflakjfdlkajsdflkjsafkjdslkjf
+                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
                     </div>
                   </span>
                 </div>
+                <!-- 요일 -->
                 <div>
                   <ul class="day_box">
                     <li class="day">
@@ -230,32 +230,107 @@
             </li>
             <li>
               <a href ="dummy.html" class="care_profile">
-                <sapn>
+                <!-- 사진이랑 소개 -->
+                <div class="profile_info">
                   <div class="profile_pic_box">
                     <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
-                  <div>
-                    <ul class="day_box">
-                      <li class="day">
-                        화
-                      </li>
-                      <li class="day">
-                        화
-                      </li>
-                      <li class="day">
-                        화
-                      </li>
-                    </ul>
+                  <span class="profile_text">
+                    <div class="profile_name">
+                      김괭이dddd
+                    </div>
+                    <div class="profile_introduction">
+                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
+                    </div>
+                  </span>
+                </div>
+                <!-- 요일 -->
+                <div>
+                  <ul class="day_box">
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                  </ul>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href ="dummy.html" class="care_profile">
+                <!-- 사진이랑 소개 -->
+                <div class="profile_info">
+                  <div class="profile_pic_box">
+                    <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
-                </sapn>
-                <span class="profile_text">
-                  <div class="profile_name">
-                    김괭이
+                  <span class="profile_text">
+                    <div class="profile_name">
+                      김괭이dddd
+                    </div>
+                    <div class="profile_introduction">
+                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
+                    </div>
+                  </span>
+                </div>
+                <!-- 요일 -->
+                <div>
+                  <ul class="day_box">
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                  </ul>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href ="dummy.html" class="care_profile">
+                <!-- 사진이랑 소개 -->
+                <div class="profile_info">
+                  <div class="profile_pic_box">
+                    <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
-                  <div class="profile_introduction">
-                    재빠른...
-                  </div>
-                </span>
+                  <span class="profile_text">
+                    <div class="profile_name">
+                      김괭이dddd
+                    </div>
+                    <div class="profile_introduction">
+                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
+                    </div>
+                  </span>
+                </div>
+                <!-- 요일 -->
+                <div>
+                  <ul class="day_box">
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                    <li class="day">
+                      화
+                    </li>
+                  </ul>
+                </div>
               </a>
             </li>
           </ul>
