250807 12:13 강버들 헤더 푸터 추가

--- a/webapp/footer_login.html
+++ b/webapp/footer_login.html
@@ -8,7 +8,7 @@
   <script defer src="./assets/js/main/main.js"></script>
 </head>
 <body>
-  <!-- 로그인 시와 동일 -->
+  <!-- 비로그인 시와 동일 -->
   <footer>
     <div class="footerDiv">
       <ul>
