250807 17:46 이재빈 정보수정중

--- a/webapp/app/myPageNormal/Normal_Modify.html
+++ b/webapp/app/myPageNormal/Normal_Modify.html
@@ -45,30 +45,53 @@
         <div>회원 정보</div>
       </div>
       <div>
-        <div>성명
+        <div>
+          <div>성명</div>
           <div>이름</div>
         </div>
-        <div>상태
-          <div>
-            1레벨
-          </div>
+        <div>
+          <div>상태</div>
+          <div>1레벨</div>
         </div>
-        <div>주소
+        <div>
+          <div>주소</div>
           <nav>
             <ul>
-              <li>우편번호</li>
-              <li>주소
-                
+              <li><input type="text" placeholder="12345"></li>
+              <li>
+                <input type="text" placeholder="서울 특별시">
+                <button>우편번호 찾기</button>
               </li>
-              <li>상세주소</li>
+              <li>
+                <input type="text" placeholder="123동 123호">
+                <button>확인</button>
+              </li>
             </ul>
           </nav>
+        </div>
+        <div>
+          <div>전화번호</div>
+          <div>010-1234-5678</div>
+          <button>수정</button>
+        </div>
+        <div>
+          <div>아이디</div>
+          <div>qwer</div>
+        </div>
+        <div>
+          <div>이메일</div>
+          <input type="text" placeholder="fdsfs@naver.com">
+          <button>수정</button>
+        </div>
+        <div>
+          <div>비밀번호</div>
+           
         </div>
       </div>
     </div>
   </main>
   <footer>
-
+    <div id="footer"></div>
   </footer>
 </body>
 </html>
