250807 1753 황승우 회원가입 페이지 작업중

--- a/webapp/app/login/findId.html
+++ b/webapp/app/login/findId.html
@@ -54,7 +54,7 @@
               <button>인증번호 확인</button>
             </div>
             <div class="box_next">
-              <button>다음</button>
+              <button type="submit">다음</button>
             </div>
           </div>
         </div>
