--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,75 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>함께 걸음</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <script defer src="./assets/js/main/main.js"></script>
-</head>
-<body>
-  <header>
-    <div>
-      <span>
-        <a href="./dummy.html">
-          <img src="./assets/img/main/logoP.png">
-        </a>
-      </span>
-      <span>
-        <a href="./dummy.html">
-          마이페이지
-        </a>
-        <a href="./dummy.html">
-          로그아웃
-        </a>
-      </span>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지하철 노선도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 음식점 리스트
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 뉴스 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 일반 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 돌봄 회원 리스트
-            </a>
-          </div>
-        </li>
-      </ul>
-    </nav>
-  </header>
-</body>
-</html>
+<link rel="stylesheet" href="./assets/css/header.css">
+<header class="site_header_login">
+  <div>
+    <span>
+      <a href="./dummy.html">
+        <img src="./assets/img/main/logoP.png">
+      </a>
+    </span>
+    <span>
+      <a href="./dummy.html">
+        마이페이지
+      </a>
+      <a href="./dummy.html">
+        로그아웃
+      </a>
+    </span>
+  </div>
+  <nav>
+    <ul>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 지도
+          </a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 지하철 노선도
+          </a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 음식점 리스트
+          </a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 뉴스 게시판
+          </a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 일반 게시판
+          </a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="./dummy.html">
+            · 돌봄 회원 리스트
+          </a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+</header>
