--- a/webapp/main.html
+++ b/webapp/main.html
@@ -8,69 +8,7 @@
   <script defer src="./assets/js/main/main.js"></script>
 </head>
 <body>
-  <header>
-    <div>
-      <span>
-        <a href="./dummy.html">
-          <img src="./assets/img/main/logoP.png">
-        </a>
-      </span>
-      <span>
-        <a href="./dummy.html">
-          로그인
-        </a>
-        <a href="./dummy.html">
-          회원가입
-        </a>
-      </span>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지하철 노선도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 음식점 리스트
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 뉴스 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 일반 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 돌봄 회원 리스트
-            </a>
-          </div>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <div ></div>
   <main>
     <div class="main_body">
       <div class="news_banner">
@@ -367,5 +305,6 @@
       </span>
     </div>
   </footer>
+  <script src="./assets/js/include.js"></script>
 </body>
 </html>
