250807 19:04 장성주 마이페이지 돌봄 작성중

--- a/webapp/app/myPageCare/Care_Matching.html
+++ b/webapp/app/myPageCare/Care_Matching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_Post</title>
+  <title>매칭기록</title>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_Matching.css">
 </head>
 <body>
@@ -49,6 +49,11 @@
           <li>12월</li>
         </ul>
       </nav>
+      <div class="matching_list">
+        <ul>
+          <li> 2일 김괭이 일반회원      |  이용 시간 :   09 : 00 ~ 18 : 00    |  포인트 사용 : 10,000     |   이용 상태 : 완료/진행중/취소</li>
+        </ul>
+      </div>
       <nav class="page">
         <ul>
           <li>&lt;</li>
