--- a/webapp/app/myPageCare/Care_Message.html
+++ b/webapp/app/myPageCare/Care_Message.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_Messeage</title>
+  <title>Care_Messeage</title>
   <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Messeage.css">
 </head>
+
 <body>
   <header>
 
@@ -33,9 +35,9 @@
           <li>|</li>
           <li>보낸 쪽지</li>
         </ul>
-        
+
       </nav>
-      <nav class="mark_nav"> 
+      <nav class="mark_nav">
         <input type="checkbox">
         <ul>
           <li>보낸 사람</li>
@@ -53,7 +55,7 @@
           <li>4</li>
           <li>&gt;</li>
         </ul>
-    
+
       </nav>
       <div class="div_delete">
         <button>삭제</button>
@@ -64,4 +66,5 @@
 
   </footer>
 </body>
+
 </html>
