--- a/webapp/app/myPageCare/Care_PwCheck.html
+++ b/webapp/app/myPageCare/Care_PwCheck.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_PwCheck</title>
+  <title>Care_PwCheck</title>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_PwCheck.css">
 </head>
 <body>
