--- a/webapp/app/myPageCare/Care_Post.html
+++ b/webapp/app/myPageCare/Care_Post.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_Post</title>
+  <title>Care_Post</title>
   <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Post.css">
 </head>
 <body>
