--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -4,23 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="../../assets/css/map/map.css">
-  <script defer src="../../assets/js/map/map.js"></script>
+  <link rel="stylesheet" href="./../../assets/css/map/map.css">
+  <script defer src="./../../assets/js/map/map.js"></script>
 </head>
 <body>
-  <div class="header">
+  <div id="header">
     
   </div>
   <main>
     <div class="map_container">
       <div class="map_api"><img class="map_img" src="../../assets/img/map/mapImg.png" alt="지도그림"></div>
       <div class="sidebar">
-        <div class="map_info"></div>
+        <div class="map_info">
+          <div class="closebtn">&times;</div>
+          <div class="info_content_container">
+            <ul class="info_content">
+              <li class="info_title"></li>
+              <li class="info_address"></li>
+              <li class="info_times"></li>
+              <li class="info_phonenum"></li>
+              <li class="info_detail"></li>
+            </ul>
+          </div>
+          <div class="wishbtn">찜버튼</div>
+        </div>
         <div class="map_detail"></div>
       </div>
     </div>
   </main>
-  <div class="footer">
+  <div id="footer">
 
   </div>
   <article class="modalbox">
