--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -6,6 +6,7 @@
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./../../assets/css/map/map.css">
   <script defer src="./../../assets/js/map/map.js"></script>
+  <script defer src="./../../assets/js/map/map.js"></script>
 </head>
 <body>
   <div id="header">
@@ -13,7 +14,7 @@
   </div>
   <main>
     <div class="map_container">
-      <div class="map_api"><img class="map_img" src="../../assets/img/map/mapImg.png" alt="지도그림"></div>
+      <div class="map_api"><img class="map_img" src="./../../assets/img/map/mapImg.png" alt="지도그림"></div>
       <div class="sidebar">
         <div class="map_info">
           <div class="closebtn">&times;</div>
@@ -35,9 +36,10 @@
   <div id="footer">
 
   </div>
+  <!-- 모달창 -->
   <article class="modalbox">
     <div class="login_check_model">
-      <div class="x-box">&times;</div>
+      <div class="modal_closebtn">&times;</div>
       <div class="modal_text">로그인이 필요합니다.</div>
     </div>
   </article>
