--- a/webapp/app/myPageNormal/Normal_Mark.html
+++ b/webapp/app/myPageNormal/Normal_Mark.html
@@ -25,32 +25,33 @@
         <li>회원 탈퇴</li>
       </ul>
     </nav>
-    <div class="div_mark">
-      <div class="title">찜한 목록</div>
-      <nav class="mark_nav">
-        <input type="checkbox">
-        <ul>
-          <li>이름</li>
-          <li>위치</li>
-          <li>전화번호</li>
-        </ul>
-      </nav>
-      <nav class="page">
-        <ul>
-          <li>&lt;</li>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>&gt;</li>
-        </ul>
+    <form action="" method="get">
+      <div class="div_mark">
+        <div class="title">찜한 목록</div>
+        <nav class="mark_nav">
+          <input type="checkbox">
+          <ul>
+            <li>이름</li>
+            <li>위치</li>
+            <li>전화번호</li>
+          </ul>
+        </nav>
+        <nav class="page">
+          <ul>
+            <li>&lt;</li>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>&gt;</li>
+          </ul>
 
-      </nav>
-      <div class="div_delete">
-        <button>찜 삭제</button>
+        </nav>
+        <div class="div_delete">
+          <button>찜 삭제</button>
+        </div>
       </div>
-    </div>
-    
+    </form>
     
   </main>
   <footer>
