--- a/webapp/app/myPageNormal/Normal_Post.html
+++ b/webapp/app/myPageNormal/Normal_Post.html
@@ -27,47 +27,37 @@
     </nav>
   
     <div class="div_mark">
-<<<<<<< HEAD
-      <div>게시글 관리 </div>
-=======
       <div class="title">게시글 관리 </div>
->>>>>>> main
-      <nav class="div_choose">
-        <ul>
-          <li>작성한 게시글 목록</li>
-        </ul>
-  
-      </nav>
-      <nav class="mark_nav">
-        <input type="checkbox">
-        <ul>
-<<<<<<< HEAD
-  
-=======
->>>>>>> main
-          <li>작성자</li>
-          <li>제목</li>
-          <li>날짜</li>
-        </ul>
-      </nav>
-      <nav class="page">
-        <ul>
-          <li>&lt;</li>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>&gt;</li>
-        </ul>
-  
-      </nav>
-<<<<<<< HEAD
-      <button>삭제</button>
-=======
-      <div class="div_delete">
-        <button>삭제</button>
-      </div>
->>>>>>> main
+      <form action="" method="get">
+        <nav class="div_choose">
+          <ul>
+            <li>작성한 게시글 목록</li>
+          </ul>
+    
+        </nav>
+        <nav class="mark_nav">
+          <input type="checkbox">
+          <ul>
+            <li>작성자</li>
+            <li>제목</li>
+            <li>날짜</li>
+          </ul>
+        </nav>
+        <nav class="page">
+          <ul>
+            <li>&lt;</li>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>&gt;</li>
+          </ul>
+    
+        </nav>
+        <div class="div_delete">
+          <button>삭제</button>
+        </div>
+      </form>
     </div>
   </main>
   <footer>
