--- a/webapp/app/myPageCare/Care_Matching.html
+++ b/webapp/app/myPageCare/Care_Matching.html
@@ -52,6 +52,7 @@
       <div class="matching_list">
         <ul>
           <li> 2일 김괭이 일반회원      |  이용 시간 :   09 : 00 ~ 18 : 00    |  포인트 사용 : 10,000     |   이용 상태 : 완료/진행중/취소</li>
+          <hr>
         </ul>
       </div>
       <nav class="page">
@@ -73,5 +74,27 @@
   <footer>
   
   </footer>
+
+  <div class="modal" id="matching_add">
+    <div class="modal_container">
+      <h2> 매칭 추가 </h2>
+      <form action="" method="get">
+        <label for=""> 대상자: <input type="text"></label><br>
+        <label for=""> 날짜: <input type="text"></label><br>
+        <label for=""> 시간: <input type="text"></label><br>
+        <label for=""> 지급 P: <input type="text"></label><br>
+        <div class="modal_button">
+          <button type="submit" id="success_modal">등록</button>
+          <button id="cansel_modal">취소</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="modal" id="complete_modal">
+    <div class="modal_container">
+      <p>매칭 정보가 등록되었습니다</p>
+      <button id="success_button">확인</button>
+    </div>
+  </div>
 </body>
 </html>
