250807 22:10 강버들 헤더, 푸터 추가

--- a/webapp/main.html
+++ b/webapp/main.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/header.css">
+  <link rel="stylesheet" href="./assets/css/footer.css">
   <script defer src="./assets/js/main/main.js"></script>
+  <script defer src="./assets/js/main/include.js"></script>
 </head>
 <body>
-  <div ></div>
+  <div id="header"></div>
   <main>
     <div class="main_body">
       <div class="news_banner">
@@ -276,35 +279,7 @@
       </div>
     </div>
   </main>
-  <footer>
-    <div class="footerDiv">
-      <ul>
-        <li>
-          <p>
-            전화번호 : 02-538-0021
-          </p>
-        </li>
-        <li>
-          <p>
-            주소 : 서울특별시 강남구 테헤란로 146 현익빌딩 3,4층
-          </p>
-        </li>
-        <li>
-          <p>
-            직업훈련시설명 : 코리아IT아카데미
-          </p>
-        </li>
-        <li>
-          <p>
-            E-mail : tegongmang22 koreaedugroup.com
-          </p>
-        </li>
-      </ul>
-      <span>
-        ⓒ RB
-      </span>
-    </div>
-  </footer>
-  <script src="./assets/js/include.js"></script>
+  <div id="footer"></div>
+  <!-- 메인 -->
 </body>
 </html>
