--- a/webapp/footer.html
+++ b/webapp/footer.html
@@ -1,137 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>함께 걸음</title>
-  <link rel="stylesheet" href="./../../assets/css/restaurant/restaurant.css">
-</head>
-<body>
-  <header>
-    <div>
-      <span>
-        <a href="./dummy.html">
-          <img src="./../../assets/img/main/logoP.png">
-        </a>
-      </span>
-      <span>
-        <a href="./dummy.html">
-          로그인
-        </a>
-        <a href="./dummy.html">
-          회원가입
-        </a>
-      </span>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 지하철 노선도
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 음식점 리스트
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 뉴스 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 일반 게시판
-            </a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href="./dummy.html">
-              · 돌봄 회원 리스트
-            </a>
-          </div>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div class="main_body">
-      <p class="page_title">
-        음식점 리스트
-      </p>
-      <div class="context">
-        <div class="region_select">
-          <ul class="region_list">
-            <li class="region_button">
-              방배동
-            </li>
-            <li class="region_button">
-              반포동
-            </li>
-            <li class="region_button">
-              서초동
-            </li>
-            <li class="region_button">
-              양재동
-            </li>
-            <li class="region_button">
-              내곡동
-            </li>
-            <li class="region_button">
-              잠원동
-            </li>
-          </ul>
-        </div>
-        <div class="restaurant_select">
-          냥
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer>
-    <div class="footerDiv">
-      <ul>
-        <li>
-          <p>
-            전화번호 : 02-538-0021
-          </p>
-        </li>
-        <li>
-          <p>
-            주소 : 서울특별시 강남구 테헤란로 146 현익빌딩 3,4층
-          </p>
-        </li>
-        <li>
-          <p>
-            직업훈련시설명 : 코리아IT아카데미
-          </p>
-        </li>
-        <li>
-          <p>
-            E-mail : tegongmang22 koreaedugroup.com
-          </p>
-        </li>
-      </ul>
-      <span>
-        ⓒ RB
-      </span>
-    </div>
-  </footer>
-</body>
-</html>
+<footer class="site-footer">
+  <div class="footerDiv">
+    <ul>
+      <li>
+        <p>
+          전화번호 : 02-538-0021
+        </p>
+      </li>
+      <li>
+        <p>
+          주소 : 서울특별시 강남구 테헤란로 146 현익빌딩 3,4층
+        </p>
+      </li>
+      <li>
+        <p>
+          직업훈련시설명 : 코리아IT아카데미
+        </p>
+      </li>
+      <li>
+        <p>
+          E-mail : tegongmang22 koreaedugroup.com
+        </p>
+      </li>
+    </ul>
+    <span>
+      ⓒ RB
+    </span>
+  </div>
+</footer>
