250807 21:28 이재빈 매칭기록 중

--- a/webapp/app/myPageNormal/Normal_Modify.html
+++ b/webapp/app/myPageNormal/Normal_Modify.html
@@ -45,7 +45,7 @@
         <div>
           <div>회원 정보</div>
         </div>
-        <div>
+        <div class="normalmodify">
           <div>
             <div>성명</div>
             <div>이름</div>
@@ -86,7 +86,17 @@
           </div>
           <div>
             <div>비밀번호</div>
-            
+            <nav>
+              <ul>
+                <li>
+                  <input type="password" placeholder="비밀번호를 입력하여 주십시오">
+                </li>
+                <li>
+                  <input type="password" placeholder="새 비밀번호를 다시 입력하여 주십시오">
+                  <button>확인</button>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </form>
