250807 2221 황승우 회원가입 페이지 완료

--- a/webapp/app/sign/sign_care.html
+++ b/webapp/app/sign/sign_care.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입(일반)</title>
+  <title>회원가입(돌봄)</title>
   <link rel="stylesheet" href="./../../assets/css/sign/basic.css">
-  <link rel="stylesheet" href="./../../assets/css/sign/sign.css">
+  <link rel="stylesheet" href="./../../assets/css/sign/sign_care.css">
 </head>
 <body>
   <header>
@@ -13,7 +13,10 @@
   </header>
   <main>
     <section class="sign">
-      <form action="" method="">
+      <form action="" method="" class="sign_form">
+        <div class="sign_box sign_title">
+          <p>회원가입</p>
+        </div>
         <div class="sign_box sign_id">
           <p>아이디</p>
           <input type="text" placeholder="8자리 이상, 문자 숫자 포함">
@@ -38,7 +41,6 @@
         <div class="sign_box sign_birth">
           <p>휴대전화</p>
           <input type="text" placeholder="- 없이 숫자만 입력해주세요.">
-          <button>인증번호 받기</button>
         </div>
         <div class="sign_box sign_phone">
           <input type="text" placeholder="인증번호 6자리 입력">
@@ -51,13 +53,47 @@
         </div>
         <div class="sign_box sign_address">
           <p>주소</p>
-          <input type="text" placeholder="- 없이 숫자만 입력해주세요.">
+          <input type="text" placeholder="">
           <button>우편 주소</button>
         </div>
-        <div class="sign_box address_detail"></div>
-        <div class="sign_box sign_choice"></div>
-        <div class="sign_box sign_level"></div>
-        <div class="sign_box sign_btn"></div>
+        <div class="sign_box address_detail">
+          <p>상세 주소</p>
+          <input type="text" placeholder="">
+        </div>
+        <div class="sign_box sign_choice">
+          <p>회원 유형 선택</p>
+          <label for="normal">
+            <input type="radio" id="normal" name="type" value="normal" checked />
+            일반회원
+          </label>
+          <label for="care">
+            <input type="radio" id="care" name="type" value="care" />
+            돌봄회원
+          </label>
+        </div>
+          
+          <div class="file">
+            <input type="text" readonly>
+            <button>파일첨부</button>
+          </div>
+          <div class="file">
+            <input type="text" readonly>
+            <button>파일첨부</button>
+          </div>
+        <div class="sign_box sign_level">
+          <div class="file_title">
+            첨부파일 
+          </div>
+          <ul>
+            <li>운전면허증</li>
+            <li>운전면허증</li>
+            <li>운전면허증</li>
+            <li>운전면허증</li>
+          </ul>
+        </div>
+        <div class="sign_box sign_btn">
+          <button>가입하기</button>
+        </div>
       </form>
     </section>
   </main>
