250808 00:43 강버들 음식점 리스트 진행 중

--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,16 +1,16 @@
 <header class="site_header_login">
   <div>
     <span>
-      <a href="./dummy.html">
-        <img src="./assets/img/main/logoP.png">
+      <a href="/team04-rb/webapp/main.html">
+        <img src="/team04-rb/webapp/assets/img/main/logoP.png">
       </a>
     </span>
     <span>
-      <a href="./dummy.html">
-        마이페이지
+      <a href="/team04-rb/webapp/app/login/login.html">
+        로그인
       </a>
-      <a href="./dummy.html">
-        로그아웃
+      <a href="/team04-rb/webapp/app/sign/terms.html">
+        회원가입
       </a>
     </span>
   </div>
@@ -18,42 +18,42 @@
     <ul>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/map/map.html">
             · 지도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/subwayLine/subway.html">
             · 지하철 노선도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/restaurant/restaurant.html">
             · 음식점 리스트
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/news/news.html">
             · 뉴스 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/post/post.html">
             · 일반 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./dummy.html">
+          <a href="/team04-rb/webapp/app/careMember/careMember.html">
             · 돌봄 회원 리스트
           </a>
         </div>
