250808 09:05 장성주 마이페이지 돌봄 진행중

--- a/webapp/app/myPageCare/Care_reference.html
+++ b/webapp/app/myPageCare/Care_reference.html
@@ -51,12 +51,13 @@
           <li>2</li>
           <li>3</li>
           <li>4</li>
+          <li>...</li>
           <li>&gt;</li>
         </ul>
 
       </nav>
       <div class="div_delete">
-        <button>삭제</button>
+        <button>등록</button>
       </div>
     </div>
   </main>
