250808 09:37 강버들 main/include.js 경로 수정

--- a/webapp/app/restaurant/restaurant.html
+++ b/webapp/app/restaurant/restaurant.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
-  <link rel="stylesheet" href="/team04-rb/webapp/assets/css/restaurant/restaurant.css">
-  <link rel="stylesheet" href="/team04-rb/webapp/assets/css/header.css">
-  <link rel="stylesheet" href="/team04-rb/webapp/assets/css/footer.css">
-  <script defer src="/team04-rb/webapp/assets/js/main/include.js"></script>
-  <script defer src="/team04-rb/webapp/assets/js/restaurant/restaurant.js"></script>
+  <link rel="stylesheet" href="./../../assets/css/restaurant/restaurant.css">
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/restaurant/restaurant.js"></script>
 </head>
 <body>
   <div id="header"></div>
