250808 09:41 이재빈 포인트수정 중2

--- a/webapp/app/myPageNormal/Normal_Point.html
+++ b/webapp/app/myPageNormal/Normal_Point.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normal_Modify</title>
+  <title>Normal_Point</title>
   <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Point.css">
 </head>
 </head>
@@ -45,13 +45,16 @@
       </div>
       <form action="" method="get">
         <div class="point_have">
-          <div>포인트 잔액</div>
-          <div>10000 포인트</div>
-          <button>포인트 충전</button>
-          <button>충전 내역</button>
+          <div class="point_have_title">포인트 잔액</div>
+          <div class="point_point">10000 포인트</div>
+          <div class="button">
+            <button>포인트 충전</button>
+            <button>충전 내역</button>
+          </div>
+          
         </div>
         <div class="point_use">
-          <div>포인트 사용 내역</div>
+          <div class="point_use_title">포인트 사용 내역</div>
           <nav class="month">
             <ul>
               <li>&lt;</li>
