--- a/webapp/app/admin/sidebar.html
+++ b/webapp/app/admin/sidebar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/admin/basic.css">
   <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css">
 </head>
+
 <body>
   <header>
     <h1>ㅎ더더ㅓ더</h1>
@@ -14,12 +16,51 @@
   <div class="sidebar">
     <ul>
       <div class="blank"></div>
-      <li>회원관리</li>
-      <li>일반 게시글 관리</li>
-      <li>뉴스 게시글 관리</li>
-      <li>돌봄 회원 환급 관리</li>
-      <li>돌봄 회원 신청</li>
-      <li>1:1 문의사항 관리</li>
+      <a href="">
+        <li>회원관리</li>
+      </a>
+      <div class="board">
+        <li>일반 게시글 관리</li>
+        <ul class="side_menu side_normal_board">
+          <a href="#">
+            <li>공지사항 관리</li>
+          </a>
+          <a href="#">
+            <li>신고글 관리</li>
+          </a>
+        </ul>
+      </div>
+      </a>
+      <div class="board">
+        <li>뉴스 게시글 관리</li>
+        <ul class="side_menu side_news_board">
+          <a href="#">
+            <li>뉴스 게시물</li>
+
+          </a>
+          <a href="#">
+            <li>배너 게시물</li>
+
+          </a>
+        </ul>
+      </div>
+      <a href="">
+        <li>돌봄회원 환급 관리</li>
+      </a>
+      <div class="board">
+        <li>돌봄 회원 신청</li>
+        <ul class="side_menu side_news_board">
+          <a href="#">
+            <li>신청 관리</li>
+          </a>
+          <a href="#">
+            <li>수강 관리</li>
+          </a>
+        </ul>
+      </div>
+      <a href="">
+        <li>1:1 문의사항</li>
+      </a>
     </ul>
   </div>
   <main></main>
@@ -27,4 +68,5 @@
     <h1>푸텉ㅌ터</h1>
   </footer>
 </body>
+
 </html>
