250808 11:22 장성주 마이페이지 돌봄 수정중

--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -4,22 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원탛퇴</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_exit.css">
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/careExit.css">
 </head>
 <body>
-  <header></header>
+  <div id="header"></div>
+  
   <main>
     <nav class="sidebar">
       <div></div>
       <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
+        <a href="">
+          <li>개인정보 수정</li>
+        </a>
+        <a href="">
+          <li>찜한 목록</li>
+        </a>
+        <a href="">
+          <li>매칭 기록</li>
+        </a>
+        <a href="">
+          <li>쪽지함</li>
+        </a>
+        <a href="">
+          <li>게시글 관리</li>
+        </a>
+        <a href="">
+          <li>포인트 환급</li>
+        </a>
+        <a href="">
+          <li>1 대 1 문의</li>
+        </a>
+        <a href="">
+          <li>회원 탈퇴</li>
+        </a>
       </ul>
     </nav>
     <section class="exit-section">
@@ -87,6 +107,7 @@
       </div>
     </div>
   </div> -->
+  <div id="footer"></div>
 </body>
 
 </html>
