--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_Messeage</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Messeage.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/careMessage.css">
 </head>
 
 <body>
@@ -16,7 +16,10 @@
     <nav class="main_sidebar">
       <div></div>
       <ul>
-        <li>개인정보 수정</li>
+        <a href="#">
+          <li>개인정보 수정</li>
+        </a>
+        
         <li>찜한 목록</li>
         <li>매칭 기록</li>
         <li>쪽지함</li>
