--- a/webapp/app/myPageCare/carePwCheck.html
+++ b/webapp/app/myPageCare/carePwCheck.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_PwCheck</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_PwCheck.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/carePwCheck.css>
 </head>
 <body>
   <header>
