--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Care_Modify</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/Normal_Modify.css">
+  <title>Normal_reference</title>
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/careReference.css">
 </head>
-</head>
+
 <body>
   <header>
 
@@ -28,22 +29,41 @@
 
     <div class="div_mark">
       <div class="title">1 대 1 문의</div>
-    </div>
-    <div>
-      <div>
-
-      </div>
-      <nav class="info">
+      <nav class="div_choose">
         <ul>
-          <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
-          <li>회원님의 개인 정보를 안전하게 보호하기 위해 최선을 다하고 있습니다. </li>
-          <li>회원님의 정보를 특정할 수 있는 것은 입력을 지양해 주시길 바랍니다.</li>
+          <li>1 대 1 문의 목록</li>
+        </ul>
+
+      </nav>
+      <nav class="mark_nav">
+        <input type="checkbox">
+        <ul>
+
+          <li>작성자</li>
+          <li>제목</li>
+          <li>날짜</li>
         </ul>
       </nav>
+      <nav class="page">
+        <ul>
+          <li>&lt;</li>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>...</li>
+          <li>&gt;</li>
+        </ul>
+
+      </nav>
+      <div class="div_delete">
+        <button>등록</button>
+      </div>
     </div>
   </main>
   <footer>
 
   </footer>
 </body>
+
 </html>
