--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_Post</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageCare/Care_Post.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/carePost.css">
 </head>
 <body>
   <header>
@@ -36,7 +36,9 @@
       <nav class="mark_nav">
         <input type="checkbox">
         <ul>
-          <li>작성자</li>
+          <div>
+            <li>작성자</li>
+          </div>
           <li>제목</li>
           <li>날짜</li>
         </ul>
