--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./../../assets/css/map/map.css">
-  <script defer src="./../../assets/js/map/map.js"></script>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <script defer src="./../../assets/js/map/map.js"></script>
 </head>
+
 <body>
-  <div id="header">
-    
-  </div>
+  <div id="header"></div>
   <main>
     <div class="map_container">
       <div class="map_api"><img class="map_img" src="./../../assets/img/map/mapImg.png" alt="지도그림"></div>
@@ -33,9 +35,7 @@
       </div>
     </div>
   </main>
-  <div id="footer">
-
-  </div>
+  <div id="footer"></div>
   <!-- 모달창 -->
   <article class="modalbox">
     <div class="login_check_model">
@@ -44,4 +44,5 @@
     </div>
   </article>
 </body>
+
 </html>
